# my-sakura-moyu

./: .gitignore  README.md  auto_build.py  create_patch.py  ffmpeg-configure.txt  filelist.h  tc_data.db
archive/script/: fvpbin.py  image.py
binary/fvp_vm/: CMakeLists.txt
binary/fvp_vm/include/: VmAddrMap.h  VmBin.h  VmBitSet.h  VmBlock.h  VmEnv.h  VmInst.h  VmSub.h
binary/fvp_vm/include/sys/: cdefs.h  queue.h  tree.h
binary/fvp_vm/src/: ConsoleMain.cpp  VmBitSet.cpp  VmBlock.cpp  VmEnv.cpp  VmInst.cpp  VmSub.cpp
filter/: .clang-format  CMakeLists.txt
filter/include/: common.h  strsub.h  subtitle.h
filter/include/overlay/: i_d3d9.h
filter/src/: dllmain.cpp  load.c  patch.rc  resource.h  subtitle.cpp
filter/src/overlay/: i_d3d9.cpp  i_d3d9device.cpp
fptool/: CMakeLists.txt
fptool/include/fvp/: image.h  package.h
fptool/src/: image.cpp  main.cpp  package.cpp  rgba_to_rgb.cpp
installer/: patch.nsi
installer/icon/: header.xcf
movie/: ed1.ass  ed1.srt  ed2.ass  srt_subtitle.py  vd1.ass  vd1_s.ass  vd1_v1_s.ass  vd1_v2_s.ass  vd2.ass  vd2_s.ass
new_sheet/: opt_parts.psd  sector.txt
portrait/: draw_names.ipynb
portrait/.ipynb_checkpoints/: draw_names-checkpoint.ipynb
tcclient/: README.md  package.json  vue.config.js
tcclient/public/: index.html
tcclient/public/css/: tcclient.css
tcclient/src/: App.vue  main.js  tcclient.js  version.js
tcclient/src/components/: MergeBox.vue  UnitList.vue
tcserver/: main.py  tc_data.db-journal
