cmake_minimum_required(VERSION 3.15)
cmake_policy(SET CMP0091 NEW)
project(fptool)

set(CMAKE_CXX_STANDARD 14)
enable_language(C CXX)

if (MSVC AND CMAKE_CL_64)
    link_directories(./msvc/lib)
    include_directories(./msvc/include)
    set(ZLIB_LIBRARY zlib)
    set(PNG_LIBRARY libpng16)
else ()
    find_package(ZLIB REQUIRED)
    find_package(PNG REQUIRED)
    include_directories(${ZLIB_INCLUDE_DIR})
    include_directories(${PNG_INCLUDE_DIR})
endif ()
include_directories(include)

add_executable(fptool src/image.cpp src/package.cpp src/main.cpp)
add_executable(rgba2rgb src/rgba_to_rgb.cpp)
target_link_libraries(fptool ${ZLIB_LIBRARY} ${PNG_LIBRARY})
target_link_libraries(rgba2rgb ${ZLIB_LIBRARY} ${PNG_LIBRARY})
